# davies-ams-2026

./: .gitignore  README.md  fetch_synoptic.py  pyproject.toml
src/herbie_aqm/: __init__.py
